[tool.poetry]
name = "nsf_abstracts"
version = "0.1.0"
description = "Retrieve topics from abstracts"
authors = ["Carlos <carlos.avellaneda8@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.1.0"
lxml = "^4.9.3"
tqdm = "^4.66.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
